[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/theme.tres" type="Theme" id=1]
[ext_resource path="res://menu/options.gd" type="Script" id=2]

[node name="Options" type="Control" groups=[
"menu",
]]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.5
margin_top = -80.0
margin_right = 268.5
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sound" type="Button" parent="VBoxContainer"]
margin_right = 537.0
margin_bottom = 20.0
disabled = true
text = "Sound"

[node name="Controls" type="Button" parent="VBoxContainer"]
margin_top = 35.0
margin_right = 537.0
margin_bottom = 55.0
disabled = true
text = "Controls"

[node name="Skill" type="Button" parent="VBoxContainer"]
margin_top = 70.0
margin_right = 537.0
margin_bottom = 90.0
text = "Skill - Normal"

[node name="Display" type="Button" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 537.0
margin_bottom = 125.0
disabled = true
text = "Display"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 140.0
margin_right = 537.0
margin_bottom = 160.0
text = "Â«    Back"

[connection signal="pressed" from="VBoxContainer/Sound" to="." method="_on_Sound_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Skill" to="." method="_on_Skill_pressed"]
[connection signal="pressed" from="VBoxContainer/Display" to="." method="_on_Display_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
